@@ -44,7 +44,7 @@ module SUFR_constants_astro
   save
   
   ! Astronomical constants:
-  real(double),public :: julyear,solday,siday,planr(0:9),pland(0:9),earthr
+  real(double),public :: julyear,solday,siday,planr(0:9),pland(0:9),plana(0:9),earthr
   real(double),public :: au,km,rsun,msun,jd1875,jd2000,eps2000
   
   ! Satellite data for planets 4-8:
@@ -318,8 +318,9 @@ contains
     eps2000 = 0.409092804d0   ! Obliquity of the ecliptic at J2000.0
     
     pland = (/3476.206d5, 4879.d5, 12198.d5, 1.39198d11, 6794.d5, 142984.d5, 120536.d5, 51118.d5, 49528.d5, &
-         2390.d5/)      ! Equatorial diameter (cm)
+         2390.d5/)      ! Equatorial diameters (cm)
     planr = pland/2.d0  ! Equatorial radii (cm)
+    plana = (/0.d0, 0.3871d0, 0.7233d0, 1.d0, 1.5237d0, 5.2028d0, 9.5388d0, 19.191d0, 30.061d0, 39.529d0/)*au  !Semi-major axes (cm)
     
     earthr = 6378.14d5  ! Eq. radius of the Earth in cm
     
