@@ -3,6 +3,11 @@
   ChangeLog.txt for libSUFR
   
      
+   41: 17/04/2011:
+     - system: added quit_program_warning() and quit_program_error() to generate 
+       standardized warnings and errors, and allow non-zero exit codes
+     - constants: added semi-major axes of planets
+   
    40: 06/04/2011:  ** SF release 0.1.6 **
      - Added routine wass() to angle2string.f90 - it returns an angle in " in HTML
      - 4419 lines of code
@@ -33,6 +38,7 @@
      - Updated CMake files, make
      
    33: 22/03/2011:  *** SF release 0.1.4 ***
+     - 2587 lines of code
    
    32: 22/03/2011:
      - Critical bugfix: 
@@ -43,6 +49,7 @@
    31: 12/03/2011:  *** SF release 0.1.3 ***
      - Make gfortran compiler flags compatible with v.4.4
      - Adapted comments
+     - 2588 lines of code
    
    30: 12/03/2011:
      - Added text.f90, with lowercase(), uppercase(), uppercaseinitial() from TheSky
@@ -61,6 +68,7 @@
           
    27: 01/01/2011:  *** SF release 0.1.2 ***
      - Added doc/CHANGELOG (for releases), version.txt (release version) to svn
+     - 1794 lines of code
      
    26: 01/01/2011:
      - Updated doc/README, added doc/INSTALL
@@ -100,6 +108,7 @@
    
    15: AstroFloyd, 18/12/2010  *** SF release 0.1.1 ***
       - Changed Doxygen output dir
+      - 1746 lines of code
    
    14: AstroFloyd, 18/12/2010
       - added make script to svn
